--- a/WinAPI_project2/WinAPI_project2.vcxproj.filters
+++ b/WinAPI_project2/WinAPI_project2.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="20230717_메모장.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="20230724_멀티쓰레드.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WinAPI_project2.rc">
